--- a/fractions1/templates/simplestForm.html
+++ b/fractions1/templates/simplestForm.html
@@ -60,7 +60,7 @@ swal("Oops!", "Checkout hint for help", "error");
 
 
 {% block content %}
-<h5 class="card-title">{{ answer.que }}</h5>
+<h5 class="card-title easy_qts">{{ answer.que }}</h5>
 
 <label for="quo3" style="display:block">Solution : </label>
 <input type="text" id="quo3" name="rem" maxlength="8" size="2" class="num" onblur="check_num();" required>
