--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -76,48 +76,52 @@
 		document.getElementById("date").innerHTML = d.toDateString();
 	</script>
 
-	<div class="main">
-		<div class="container-fluid white" id="fracs">
-			<h1 style="text-align:center; margin: 25px 0 10px 0;">Fractions</h1>
-			<div class="row">
-				<div class="col-lg-5 col-md-12 col-11" id="leftsection">
-					<img src="{{ url_for('static', filename = 'images/fractionbg.jpg') }}" style="padding: 5px;">
-				</div>
-				<div class="col-lg-7 col-md-12 col-11" id="rightsection">
-					<h3 style="text-align: justify;">fractions are defined as the parts of a whole. The whole can
-						be a number or any specific value or a thing. In other words,
-						it is also termed as a portion or section of any quantity.
-						It is denoted by using ‘/’ symbol, such as a/b. For example,
-						in 2/4 is a fraction where the upper part denotes the numerator
-						and lower part is the denominator.</h3>
+
+	<div id="fracs">
+		<h1 style="text-align: center;margin-bottom: 20px;">Fraction</h1>
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-12">
+				<img src="{{ url_for('static', filename = 'images/fractionbg.jpg') }}" style="padding: 5px;">
+				
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12">
+				<h3 style="text-align: justify;">fractions are defined as the parts of a whole. The whole can
+					be a number or any specific value or a thing. In other words,
+					it is also termed as a portion or section of any quantity.
+					It is denoted by using ‘/’ symbol, such as a/b. For example,
+					in 2/4 is a fraction where the upper part denotes the numerator
+					and lower part is the denominator.</h3>
 					<div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
 						<a href="{{ url_for('choice_bp.fraction_easy') }}"><button type="button" class="btn signup blue" style="color:white!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
 						<a href="{{ url_for('choice_bp.fraction_intermediate') }}"><button type="button" class="btn signup blue" style="color:white!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
 					</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="algs" style="background-color: #0070BB;">
+		
+		<h1 style="text-align: center;margin-bottom: 20px;">Algebra</h1>
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-12">
+				<img src="{{ url_for('static', filename = 'images/algebra_home.png') }}" style="padding: 5px;">
+			
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12">
+				<h3 style="color:white; text-align: justify;">With Algebra you play with letters, numbers and symbols, and you also get to
+					find secret things! And once you learn some of the "tricks",
+					it becomes a fun challenge to work out how to use your skills
+					in solving each "puzzle".</h3>
+				<div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
+					<a href="{{ url_for('choice_bp.algebra_easy') }}"><button type="button" class="btn signup white" style="color:black!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
+					<a href="{{ url_for('choice_bp.algebra_intermediate') }}"><button type="button" class="btn signup white" style="color:black!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="alg">
-		<div class="container-fluid blue" id="algs">
-			<h1 style="text-align:center;color:white; margin: 25px 0 10px 0;">Algebra</h1>
-			<div class="row">
-				<div class="col-lg-5 col-md-12 col-11" id="leftsection">
-					<img src="{{ url_for('static', filename = 'images/algebra_home.png') }}" style="padding: 5px;">
-				</div>
-				<div class="col-lg-7 col-md-12 col-11" id="rightsection">
-					<h3 style="color:white; text-align: justify;">With Algebra you play with letters, numbers and symbols, and you also get to
-						find secret things! And once you learn some of the "tricks",
-						it becomes a fun challenge to work out how to use your skills
-						in solving each "puzzle".</h3>
-					<div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
-						<a href="{{ url_for('choice_bp.algebra_easy') }}"><button type="button" class="btn signup white" style="color:black!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
-						<a href="{{ url_for('choice_bp.algebra_intermediate') }}"><button type="button" class="btn signup white" style="color:black!important;font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 
 </html>
