--- a/static/css/layout_easy.css
+++ b/static/css/layout_easy.css
@@ -167,3 +167,39 @@ i {
 .prev:hover {
   color: #0070bb !important
 }
+@media screen and (max-width:768px) {
+  .easy_qts{
+    width: 80%;
+  }
+  #progressbar {
+    
+    top: 20%;
+    right:0%;
+  }
+  .card_body{
+    min-height: 45vh;
+  }
+  .toasts{
+    margin-left:4%
+  }
+}
+
+
+
+@media screen and (max-width:350px) {
+  .card_body{
+    min-height: 85vh;
+  }
+  #progressbar {
+    right: 0%;
+    top: 25%;
+  }
+  
+  .footerStyling{
+    margin-top: 3rem !important;
+  }
+  .toasts{
+    margin-bottom: -3rem;
+  }
+  
+}
