--- a/algebra/templates/layout.html
+++ b/algebra/templates/layout.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>Practice</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename = "css/layout.css") }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename = 'css/layout.css') }}">
   <style>
     {% block style %}{% endblock %}
   </style>
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-					<a class="nav-link a1" id="home_nav" href="">Home</a>
+					<a class="nav-link a1" id="home_nav" href="#">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
@@ -44,8 +44,8 @@
     </div>
   </nav>
 
-  <div class="container main">
-    <div class="card">
+  <div class="container main" style="margin-bottom: 2rem;overflow-x: hidden;">
+    <div class="card" >
 
       <div class="card-header white" style="display: flex;justify-content: space-between;align-items: center;color: #0070BB; background-color:rgba(0,0,0,.03);">
         <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
@@ -59,9 +59,9 @@
           <li class="step0"></li>
         </ul>
       </div>
-      <div class="time-card">
+      <div class="time-card card_body" >
         <form id="submit-form" method="POST">
-        <div class="card-body" style="width: 80%;">
+        <div class="card-body" style="width: 100%;">
 
           {% block content %}{% endblock %}
 
@@ -87,14 +87,17 @@
                   <button class="btn btn-info" id = "4" style="width: 100%; margin: 10px auto;">{% block option_4 %}{% endblock%}</button> -->
               {% endblock %}
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer ">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container" style="margin-left: 65%;">
+     
+
+
+      <div class="container toasts" >
         <div class="toast" data-autohide="false" id="mytoast">
           <div class="toast-header">
             <strong class="mr-auto text-primary">Correct</strong>
@@ -105,22 +108,25 @@
           </div>
         </div>
       </div>
-
-
-
-      <div class="card-footer text-muted green">
+      <div class="card-footer text-muted green footerStyling" >
         <a href="#" class="btn btn-info" data-toggle="modal" data-target="#myModal" id="hint-btn">Hint</a>
 
         <i class="bi bi-circle-fill right"></i>
         <i class="bi bi-circle-fill"></i>
         <i class="bi bi-circle-fill"></i>
         <i class="bi bi-circle-fill"></i>
-        <a href="#" class="btn btn-success next" id="next-btn"> Next</a>
+        <button type="submit" class="btn btn-success next" id="next-btn"> Next</button>
       </div>
     </div>
   </form>
   </div>
   <script>
+    
+      // window.onload = (event) => {
+      //   if (sessionStorage.count) { 
+      //     sessionStorage.removeItem(count);
+      //   }
+      // };
     $(document).ready(function() {
       $('.toast').toast('hide');
       var x = sessionStorage.count;
@@ -145,7 +151,6 @@
         }
 
       })
-
       $('#home_nav').click(function() {
         if (sessionStorage.count < 4 || sessionStorage.count == null) {
           if (confirm("Your score will not be saved")) {
@@ -172,8 +177,9 @@
       var getTimes=[];
       $('#hint-btn').click(function() {
         getTimes[hint_count++]=new Date().getTime();
+        // console.log(getTime);
         // hint_count++;
-        // var time = new Date();
+        // getTime = new Date();
         // $.get('/getTime', {
         //   'quesid': quesid,
         //   'hint_count': hint_count,
@@ -181,11 +187,10 @@
         // }, function(response) {
         //   console.log("done");
         // });
+
       })
 
-      
-
-        $("#submit-form").submit(function(e){
+      $("#submit-form").submit(function(e){
         e.preventDefault();
         $('.toast').toast('show');
         if (sessionStorage.count) {
@@ -194,11 +199,15 @@
           sessionStorage.count = 1;
         }
 
+
         let score = 25 - (5 * hint_count)-wronghint;
         sessionStorage.setItem(x, score);
         console.log(sessionStorage.getItem(x));
 
         if (sessionStorage.count == 4) {
+
+          // event.preventDefault();
+          // event.stopPropagation();
           $.get('/endTime', {
             'quesid': quesid,
             'qcount': Number(sessionStorage.count),
@@ -210,6 +219,7 @@
           }, function(response) {
             console.log("done");
           });
+
           let keys = Object.keys(sessionStorage);
           for (let key of keys) {
             data[`${key}`] = `${sessionStorage.getItem(key)}`;
@@ -226,10 +236,11 @@
               console.log("Success");
               console.log(response);
               window.location.href = "{{ url_for('home_bp.home') }}";
+
             },
             error: function(error) {
               console.log(error);
-              window.location.href = "{{ url_for('home_bp.home') }}";
+               window.location.href = "{{ url_for('home_bp.home') }}";
             }
           });
 
@@ -251,10 +262,16 @@
         }
 
 
+    
       })
-    })
-  </script>
 
+})
+      
+  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+ 
 </body>
 
 </html>
