--- a/home/templates/EditUserScore.html
+++ b/home/templates/EditUserScore.html
@@ -10,26 +10,26 @@
     <title>Edit Score</title>
 </head>
 <body>
-    <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav white">
-		<a class="navbar-brand" href="#">PhiloMath</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse " id="navbarSupportedContent">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link a1" href="/logout">Logout</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
+    <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav blue">
+        <a class="navbar-brand" href="#">PhiloMath</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                        <a class="nav-link a1" id="home_nav" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link a1" href="/logout">Logout</a>
+                    </li>
+          </ul>
+        </div>
+      </nav>
 
     <div class="container" style="margin-top: 80px;">
         <div class="main-body">
@@ -108,5 +108,12 @@
             </div>
         </div>
     </div>
+    
+
+    <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+    <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+    <script src='https://cdn.plot.ly/plotly-2.3.1.min.js'></script>
+    
+    
 </body>
 </html>
