--- a/home/templates/home-copy.html
+++ b/home/templates/home-copy.html
@@ -40,17 +40,16 @@
 			</ul>
 		</div>
 	</nav> -->
-	<nav id="n1" class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">PhiloMath</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+	<nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav blue">
+		<a class="navbar-brand" href="#">PhiloMath</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
 	
-			<div class="collapse navbar-collapse " id="navbarSupportedContent">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
+		<div class="collapse navbar-collapse " id="navbarSupportedContent">
+		  <ul class="navbar-nav">
+			<li class="nav-item">
+						<a class="nav-link a1" id="home_nav" href="#">Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
@@ -58,8 +57,7 @@
 					<li class="nav-item">
 						<a class="nav-link a1" href="/logout">Logout</a>
 					</li>
-				</ul>
-			</div>
+		  </ul>
 		</div>
 	  </nav>
 
