--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav white">
+  <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav blue">
     <a class="navbar-brand" href="#">PhiloMath</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,14 +30,14 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link a1" href="{{ url_for('home_bp.login') }}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link a1" href="#features">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link a1" href="#">Contact</a>
-        </li>
+					<a class="nav-link a1" id="home_nav" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="/logout">Logout</a>
+				</li>
       </ul>
     </div>
   </nav>
