--- a/static/css/home.css
+++ b/static/css/home.css
@@ -143,7 +143,7 @@
   align-items: center;
   flex-direction: column;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%,-50%);
 }
@@ -200,6 +200,7 @@
 .toasts{
   margin-left: 65%;
 }
+
 @media screen and (max-width:992px) {
   #quot,#author{
     font-size: 2rem !important;
@@ -209,7 +210,11 @@
   }
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width:768px) {
+  .pie_chart{
+    display: none;
+  }
+  
   .board-btn,.alg-btn,.frac-btn{
     height: 50px;
   }
@@ -235,4 +240,7 @@
     top: 72%;
   }
 } 
+@media screen and (max-width:350px) {
+  
+}
 
