--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -36,9 +36,7 @@
   color: white;
 }
 
-.right {
-  margin-left: 75%;
-}
+
 
 .next {
   margin-left: 5%;
@@ -181,9 +179,13 @@ i {
   margin-left: 65%;
 }
 @media screen and (max-width:768px) {
+  .right{
+    margin-left: 54%;
+  }
   #progressbar {
     
-    top: 38%;
+    top: 24%;
+
   }
   .card_body{
     min-height: 80vh;
@@ -193,6 +195,16 @@ i {
   }
 }
 
+
+@media screen and (max-width:768px) {
+  .right{
+    margin-left: 50%;
+  }
+  .next{
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+}
 @media screen and (max-width:400px) {
   .card_body{
     min-height: 100vh;
@@ -200,6 +212,9 @@ i {
 }
 
 @media screen and (max-width:350px) {
+  .right{
+    margin-left: 44%;
+  }
   .card_body{
     min-height: 100vh;
   }
