--- a/static/css/layout_easy.css
+++ b/static/css/layout_easy.css
@@ -168,6 +168,13 @@ i {
   color: #0070bb !important
 }
 @media screen and (max-width:768px) {
+  .right{
+    margin-left: 54%;
+  }
+  .next{
+    margin-left: 0;
+    margin-top: 1rem;
+  }
   .easy_qts{
     width: 80%;
   }
@@ -184,15 +191,22 @@ i {
   }
 }
 
-
+@media screen and (max-width:768px) {
+  .right{
+    margin-left: 50%;
+  }
+}
 
 @media screen and (max-width:350px) {
+  .right{
+    margin-left: 44%;
+  }
   .card_body{
     min-height: 85vh;
   }
   #progressbar {
     right: 0%;
-    top: 25%;
+    top: 27%;
   }
   
   .footerStyling{
