--- a/fractions1/templates/fracompare.html
+++ b/fractions1/templates/fracompare.html
@@ -53,24 +53,24 @@ var wronghint = 0;
 
 const check0=()=>
 {
-  if(document.getElementsByTagName("input")[0].value == {{ answer.lcm }} )
-  {
-    $(x[0]).show();
-    $(y[0]).hide();
-    document.getElementsByTagName("h2")[0].innerHTML="";
-    document.getElementById("icon1").style.display="inline";
-    document.getElementsByClassName("step0")[0].classList.add("active");
-  }
-  else
-  {
-    if(document.getElementsByTagName("input")[0].value !="" ){
-      feedcount++;
-      $(x[0]).hide();
-      $(y[0]).show();
-      document.getElementsByTagName("input")[0].value = "";
-      swal("Oops!", "Checkout hint for help", "error");
-    }
-  }
+if(document.getElementsByTagName("input")[0].value == {{ answer.lcm }} )
+{
+$(x[0]).show();
+$(y[0]).hide();
+document.getElementsByTagName("h2")[0].innerHTML="";
+document.getElementById("icon1").style.display="inline";
+document.getElementsByClassName("step0")[0].classList.add("active");
+}
+else
+{
+if(document.getElementsByTagName("input")[0].value !="" ){
+feedcount++;
+$(x[0]).hide();
+$(y[0]).show();
+document.getElementsByTagName("input")[0].value = "";
+swal("Oops!", "Checkout hint for help", "error");
+}
+}
 }
 
 function check1()
@@ -198,7 +198,7 @@ document.getElementById("btn3").innerHTML="Compare Denominators";
 document.getElementById("btn4").innerHTML="Compare Numerators";
 }
 else{
-    wronghint++;
+wronghint++;
 }
 }
 function right2(){
@@ -215,11 +215,11 @@ document.getElementsByClassName("ryt2")[7].style.display="block";
 document.getElementById("hint-btn").disabled = true;
 document.getElementById("hint-btn").style.backgroundColor = "grey";
 }else{
-    wronghint++;
+wronghint++;
 }
 }
 function wrong(){
-    wronghint++;
+wronghint++;
 }
 
 
@@ -229,15 +229,20 @@ function wrong(){
 
 
 {% block hint %}
-<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" id="btn1" onclick="right2();">HCF</button>
-<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" id="btn2" onclick="wrong();">Average</button>
-<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" onclick="right1();" id="btn3">LCM</button>
-<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" id="btn4" onclick="wrong()">Multiply</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" id="btn1"
+  onclick="right2();">HCF</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" id="btn2"
+  onclick="wrong();">Average</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" onclick="right1();"
+  id="btn3">LCM</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%" id="btn4"
+  onclick="wrong()">Multiply</button>
 {% endblock %}
 
 {% block content %}
 <h5 class="card-title">{{ answer.que }}</h5>
-<h5 class="card-title">If fraction 1 is greater enter <b>1</b>. If fraction 2 is greater enter <b>2</b>. If equivalent then enter <b>3</b>.</h5>
+<h5 class="card-title">If fraction 1 is greater enter <b>1</b>. If fraction 2 is greater enter <b>2</b>. If equivalent
+  then enter <b>3</b>.</h5>
 <br>
 <label for="quo1" style="display:none;" class="ryt1">LCM:</label>
 <input type="text" id="quo1" name="quo" maxlength="8" size="2" onblur="check0();" class="ryt1" style="display:none;">
