--- a/algebra/templates/layout_easy.html
+++ b/algebra/templates/layout_easy.html
@@ -5,40 +5,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>Practice</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/layout_easy.css') }}">
   <script>
-  {% block script %}{% endblock %}
+    {% block script %} {% endblock %}
   </script>
 </head>
 
 <body>
   <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav blue">
     <a class="navbar-brand" href="#">PhiloMath</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-					<a class="nav-link a1" id="home_nav" href="#">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link a1" href="/logout">Logout</a>
-				</li>
+          <a class="nav-link a1" id="home_nav" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link a1" href="/logout">Logout</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -47,7 +51,8 @@
   <div class="container main">
     <div class="card">
 
-      <div  class="card-header white" style=" display: flex;justify-content: space-between;align-items: center;color: #0070BB; background-color:rgba(0,0,0,.03);">
+      <div class="card-header white"
+        style=" display: flex;justify-content: space-between;align-items: center;color: #0070BB; background-color:rgba(0,0,0,.03);">
         <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
         <a href="#" onclick="quit();" id="quit" class="btn btn-danger">Quit</a>
       </div>
@@ -63,9 +68,9 @@
 
       <div class="time-card card_body">
         <form id="submit-form" method="POST">
-        <div class="card-body" style="width: 100%;">
-          {% block content %}{% endblock %}
-        </div>
+          <div class="card-body" style="width: 100%;">
+            {% block content %}{% endblock %}
+          </div>
 
       </div>
 
@@ -89,7 +94,7 @@
         </div>
       </div>
 
-      <div class="container toasts" >
+      <div class="container toasts">
         <div class="toast" data-autohide="false" id="mytoast">
           <div class="toast-header">
             <strong class="mr-auto text-primary">Correct</strong>
@@ -111,27 +116,27 @@
         <button type="submit" class="btn btn-success next" id="next-btn">Next</button>
       </div>
     </div>
-  </form>
+    </form>
   </div>
   <script>
-    
-      window.onload = (event) => {
-        sessionStorage.removeItem('key');
+
+    window.onload = (event) => {
+      sessionStorage.removeItem('key');
     };
 
-    $(document).ready(function() {
+    $(document).ready(function () {
       let wronghint = 0;
       $('.toast').toast('hide');
       var x = sessionStorage.count;
       console.log("count " + x);
-      if(Number(sessionStorage.count) > 4){
+      if (Number(sessionStorage.count) > 4) {
         sessionStorage.count = 0;
       }
       for (i = 0; i < Number(sessionStorage.count); i++) {
         document.getElementsByClassName("bi")[i].classList.add("done");
       }
 
-      $('#quit').click(function() {
+      $('#quit').click(function () {
         if (sessionStorage.count < 4 || sessionStorage.count == null) {
           if (confirm("Your score will not be saved")) {
             $('#quit').attr('href', "{{ url_for('home_bp.home') }}");
@@ -147,7 +152,7 @@
         }
 
       })
-      $('#home_nav').click(function() {
+      $('#home_nav').click(function () {
         if (sessionStorage.count < 4 || sessionStorage.count == null) {
           if (confirm("Your score will not be saved")) {
             $('#home_nav').attr('href', "{{ url_for('home_bp.home') }}");
@@ -169,14 +174,14 @@
         qid: quesid
       };
       var hint_count = 0;
-      var getTimes=[];
-      $('#hint-btn').click(function() {
-        getTimes[hint_count++]=new Date().getTime();
+      var getTimes = [];
+      $('#hint-btn').click(function () {
+        getTimes[hint_count++] = new Date().getTime();
       })
 
-      
 
-        $("#submit-form").submit(function(e){
+
+      $("#submit-form").submit(function (e) {
         e.preventDefault();
         $('.toast').toast('show');
         if (sessionStorage.count) {
@@ -185,19 +190,19 @@
           sessionStorage.count = 1;
         }
 
-        let score = 25 - (5 * hint_count)-wronghint;
+        let score = 25 - (5 * hint_count) - (2 * feedcount);
         sessionStorage.setItem(x, score);
         console.log(sessionStorage.getItem(x));
         if (sessionStorage.count == 4) {
           $.get('/endTime', {
             'quesid': quesid,
             'qcount': Number(sessionStorage.count),
-            'hcount' : hint_count,
-            'htime' : JSON.stringify(getTimes),
-            'score' : score,
-            'wrong' : feedcount,
-            'wronghint':wronghint
-          }, function(response) {
+            'hcount': hint_count,
+            'htime': JSON.stringify(getTimes),
+            'score': score,
+            'wrong': feedcount,
+            'wronghint': wronghint
+          }, function (response) {
             console.log("done");
           });
 
@@ -215,12 +220,12 @@
             url: '/score',
             data: JSON.stringify(data),
             type: 'POST',
-            success: function(response) {
+            success: function (response) {
               console.log("Success");
               console.log(response);
               window.location.href = "{{ url_for('home_bp.home') }}";
             },
-            error: function(error) {
+            error: function (error) {
               console.log(error);
               window.location.href = "{{ url_for('home_bp.home') }}";
             }
@@ -229,25 +234,31 @@
           $.get('/endTime', {
             'quesid': quesid,
             'qcount': Number(sessionStorage.count),
-            'hcount' : hint_count,
-            'htime' : JSON.stringify(getTimes),
-            'score' : score,
-            'wrong' : feedcount,
-            'wronghint':wronghint
-          }, function(response) {
+            'hcount': hint_count,
+            'htime': JSON.stringify(getTimes),
+            'score': score,
+            'wrong': feedcount,
+            'wronghint': wronghint
+          }, function (response) {
             console.log("done");
           });
-          setTimeout(function() {
+          setTimeout(function () {
             location.reload()
           }, 3000);
         }
       })
     });
   </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
- 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
