--- a/static/css/layout_easy.css
+++ b/static/css/layout_easy.css
@@ -1,5 +1,5 @@
 .blue {
-  background-color: #0070BB;
+  background-color: #0070bb;
   color: white;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .right {
-  margin-left: 75%;
+  margin-left: 70%;
 }
 
 .next {
@@ -44,33 +44,33 @@ i {
 }
 
 .done {
-  color: #C0E218;
+  color: #c0e218;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
 
 .card0 {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   border-radius: 8px;
-  z-index: 0
+  z-index: 0;
 }
 
 .card00 {
-  z-index: 0
+  z-index: 0;
 }
 
 .card1 {
   margin-left: 140px;
   z-index: 0;
-  border-right: 1px solid #F5F5F5
+  border-right: 1px solid #f5f5f5;
 }
 
 .card2 {
-  display: none
+  display: none;
 }
 
 .card2.show {
-  display: block
+  display: block;
 }
 
 #progressbar {
@@ -78,23 +78,23 @@ i {
   right: 10%;
   top: 20%;
   overflow: hidden;
-  color: #0070bb
+  color: #0070bb;
 }
 
 #progressbar li {
   list-style-type: none;
   font-size: 8px;
   font-weight: 400;
-  margin-bottom: 36px
+  margin-bottom: 36px;
 }
 
 #progressbar li:nth-child(3) {
-  margin-bottom: 88px
+  margin-bottom: 88px;
 }
 
 #progressbar .step0:before {
   content: "";
-  color: #fff
+  color: #fff;
 }
 
 #progressbar li:before {
@@ -106,45 +106,45 @@ i {
   background: #fff;
   border: 2px solid #0070bb;
   border-radius: 50%;
-  margin: auto
+  margin: auto;
 }
 
 #progressbar li:last-child:before {
   width: 40px;
-  height: 40px
+  height: 40px;
 }
 
 #progressbar li:after {
-  content: '';
+  content: "";
   width: 3px;
   height: 66px;
-  background: #BDBDBD;
+  background: #bdbdbd;
   position: absolute;
   left: 58px;
   top: 15px;
-  z-index: -1
+  z-index: -1;
 }
 
 #progressbar li:last-child:after {
   top: 147px;
-  height: 132px
+  height: 132px;
 }
 
 #progressbar li:nth-child(3):after {
-  top: 81px
+  top: 81px;
 }
 
 #progressbar li:nth-child(2):after {
-  top: 0px
+  top: 0px;
 }
 
 #progressbar li:first-child:after {
   position: absolute;
-  top: -81px
+  top: -81px;
 }
 
 #progressbar li.active:after {
-  background: #0070bb
+  background: #0070bb;
 }
 
 #progressbar li.active:before {
@@ -153,7 +153,7 @@ i {
 
 .tick {
   width: 100px;
-  height: 100px
+  height: 100px;
 }
 
 .prev {
@@ -161,59 +161,57 @@ i {
   position: absolute;
   left: 40px;
   top: 20px;
-  cursor: pointer
+  cursor: pointer;
 }
 
 .prev:hover {
-  color: #0070bb !important
+  color: #0070bb !important;
 }
-@media screen and (max-width:768px) {
-  .right{
+@media screen and (max-width: 768px) {
+  .right {
     margin-left: 54%;
   }
-  .next{
+  .next {
     margin-left: 0;
     margin-top: 1rem;
   }
-  .easy_qts{
+  .easy_qts {
     width: 80%;
   }
   #progressbar {
-    
     top: 20%;
-    right:0%;
+    right: 0%;
   }
-  .card_body{
+  .card_body {
     min-height: 45vh;
   }
-  .toasts{
-    margin-left:4%
+  .toasts {
+    margin-left: 4%;
   }
 }
 
-@media screen and (max-width:768px) {
-  .right{
+@media screen and (max-width: 768px) {
+  .right {
     margin-left: 50%;
   }
 }
 
-@media screen and (max-width:350px) {
-  .right{
+@media screen and (max-width: 350px) {
+  .right {
     margin-left: 44%;
   }
-  .card_body{
+  .card_body {
     min-height: 85vh;
   }
   #progressbar {
     right: 0%;
     top: 27%;
   }
-  
-  .footerStyling{
+
+  .footerStyling {
     margin-top: 3rem !important;
   }
-  .toasts{
+  .toasts {
     margin-bottom: -3rem;
   }
-  
 }
