--- a/algebra/templates/algebra_add.html
+++ b/algebra/templates/algebra_add.html
@@ -167,10 +167,10 @@ if(document.getElementsByTagName("input")[5].value == {{ answer.coeff[5] }} )
 $(x[0]).show();
 $(y[0]).hide();
 document.getElementsByClassName("quo")[5].id = 'right';
-$(x[0]).css("display","block");
-document.getElementsByTagName("h2")[0].innerHTML="";
-document.getElementById("icon1").style.display="inline";
-$(y[0]).hide();
+<!--$(x[0]).css("display","block");-->
+<!--document.getElementsByTagName("h2")[0].innerHTML="";-->
+<!--document.getElementById("icon1").style.display="inline";-->
+<!--$(y[0]).hide();-->
 document.getElementsByClassName("step0")[0].classList.add("active");
 }
 else
@@ -289,10 +289,10 @@ if(document.getElementsByTagName("input")[11].value == {{ answer.coeff[5] }} )
 $(x[1]).show();
 $(y[1]).hide();
 document.getElementsByClassName("quo")[11].id = 'right';
-$(x[1]).css("display","block");
-document.getElementsByTagName("h2")[1].innerHTML="";
-document.getElementById("icon2").style.display="inline";
-$(y[1]).hide();
+<!--$(x[1]).css("display","block");-->
+<!--document.getElementsByTagName("h2")[1].innerHTML="";-->
+<!--document.getElementById("icon2").style.display="inline";-->
+<!--$(y[1]).hide();-->
 document.getElementsByClassName("step0")[1].classList.add("active");
 }
 else
