--- a/fractions1/templates/layout.html
+++ b/fractions1/templates/layout.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link a1" id="home_nav" href="#">Home</a>
+          <a class="nav-link a1" id="home_nav" href="{{ url_for('home_bp.home') }}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
