--- a/questions_list/templates/qts_design_layout.html
+++ b/questions_list/templates/qts_design_layout.html
@@ -80,7 +80,7 @@ ajax/libs/jquery/1.5/jquery.min.js"></script>
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-					<a class="nav-link a1" id="home_nav" href="#">Home</a>
+					<a class="nav-link a1" id="home_nav" href="{{ url_for('home_bp.home') }}">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
